--- a/glossar.bib
+++ b/glossar.bib
@@ -5026,4 +5026,73 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   url      = {https://journals.lww.com/ajnonline/Fulltext/2010/07000/Evidence_Based_Practice_Step_by_Step__Critical.26.aspx},
 }
 
+@Article{FineoutOverholt2010,
+  author             = {Fineout-Overholt, Ellen and Melnyk, Bernadette Mazurek and Stillwell, Susan B. and Williamson, Kathleen M.},
+  journal            = {Am J Nurs},
+  title              = {{Evidence-Based Practice, Step by Step: Critical Appraisal of the Evidence Part III}},
+  year               = {2010},
+  issn               = {0002-936X},
+  month              = nov,
+  number             = {11},
+  pages              = {43--51},
+  volume             = {110},
+  electronic-issn    = {1538-7488},
+  linking-issn       = {0002-936X},
+  abstract           = {This is the seventh article in a series from the Arizona State University College of Nursing and Health Innovation's Center for the Advancement of Evidence-Based Practice. Evidence-based practice (EBP) is a problem-solving approach to the delivery of health care that integrates the best evidence from studies and patient care data with clinician expertise and patient preferences and values. When delivered in a context of caring and in a supportive organizational culture, the highest quality of care and best patient outcomes can be achieved. The purpose of this series is to give nurses the knowledge and skills they need to implement EBP consistently, one step at a time. Articles will appear every two months to allow you time to incorporate information as you work toward implementing EBP at your institution. Also, we've scheduled "Chat with the Authors" calls every few months to provide a direct line to the experts to help you resolve questions. See details below.},
+  address            = {United States},
+  article-doi        = {10.1097/01.NAJ.0000390523.99066.b5},
+  article-pii        = {00000446-201011000-00027},
+  completed          = {20101202},
+  doi                = {10.1097/01.naj.0000390523.99066.b5},
+  history            = {2010/12/14 06:00 [medline]},
+  issue              = {11},
+  keywords           = {Decision Making, Evidence-Based Nursing/*methods, Heart Arrest/therapy, Hospital Rapid Response Team/organization & administration, Humans, Intensive Care Units/statistics & numerical data, Nursing Research, Research Design, Review Literature as Topic},
+  language           = {eng},
+  location-id        = {10.1097/01.NAJ.0000390523.99066.b5 [doi]},
+  nlm-unique-id      = {0372646},
+  owner              = {NLM},
+  publication-status = {ppublish},
+  publisher          = {Ovid Technologies (Wolters Kluwer Health)},
+  revised            = {20181201},
+  source             = {Am J Nurs. 2010 Nov;110(11):43-51. doi: 10.1097/01.NAJ.0000390523.99066.b5.},
+  status             = {MEDLINE},
+  subset             = {IM},
+  title-abbreviation = {Am J Nurs},
+}
+
+@Article{FineoutOverholt2010a,
+  author             = {Fineout-Overholt, Ellen and Melnyk, Bernadette Mazurek and Stillwell, Susan B. and Williamson, Kathleen M.},
+  journal            = {Am J Nurs},
+  title              = {{Evidence-Based Practice, Step by Step: Critical Appraisal of the Evidence: Part II: Digging deeper—examining the “keeper” studies.}},
+  year               = {2010},
+  issn               = {0002-936X},
+  month              = sep,
+  number             = {9},
+  pages              = {41--48},
+  volume             = {110},
+  electronic-issn    = {1538-7488},
+  linking-issn       = {0002-936X},
+  abstract           = {This is the sixth article in a series from the Arizona State University College of Nursing and Health Innovation's Center for the Advancement of Evidence-Based Practice. Evidence-based practice (EBP) is a problem-solving approach to the delivery of health care that integrates the best evidence from studies and patient care data with clinician expertise and patient preferences and values. When delivered in a context of caring and in a supportive organizational culture, the highest quality of care and best patient outcomes can be achieved. The purpose of this series is to give nurses the knowledge and skills they need to implement EBP consistently, one step at a time. Articles will appear every two months to allow you time to incorporate information as you work toward implementing EBP at your institution. Also, we've scheduled "Chat with the Authors" calls every few months to provide a direct line to the experts to help you resolve questions. Details about how to participate in the next call will be published with November's Evidence-Based Practice, Step by Step.},
+  address            = {United States},
+  article-doi        = {10.1097/01.NAJ.0000388264.49427.f9},
+  article-pii        = {00000446-201009000-00024},
+  comment            = {Am J Nurs. 2010 Nov;110(11):12},
+  completed          = {20100920},
+  doi                = {10.1097/01.naj.0000388264.49427.f9},
+  history            = {2010/09/21 06:00 [medline]},
+  issue              = {9},
+  keywords           = {Checklist, Evidence-Based Nursing/*methods, Hospital Rapid Response Team, Humans, Research Design},
+  language           = {eng},
+  location-id        = {10.1097/01.NAJ.0000388264.49427.f9 [doi]},
+  nlm-unique-id      = {0372646},
+  owner              = {NLM},
+  publication-status = {ppublish},
+  publisher          = {Ovid Technologies (Wolters Kluwer Health)},
+  revised            = {20101102},
+  source             = {Am J Nurs. 2010 Sep;110(9):41-8. doi: 10.1097/01.NAJ.0000388264.49427.f9.},
+  status             = {MEDLINE},
+  subset             = {IM},
+  title-abbreviation = {Am J Nurs},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
