--- a/glossar.bib
+++ b/glossar.bib
@@ -5095,4 +5095,40 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   title-abbreviation = {Am J Nurs},
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@Article{Park2025,
+  author    = {Sarah G. Park},
+  journal   = {Sci Technol Libr},
+  title     = {{AI and Systematic Reviews: Can AI Tools Replace Librarians in the Systematic Search Process?}},
+  year      = {2025},
+  issn      = {1541-1109},
+  month     = jun,
+  pages     = {1--22},
+  abstract  = {Systematic reviews require a transparent and exhaustive search to address specific research questions. Librarians, recognized for their expertise in search strategies and databases, are frequently asked to join research teams to formulate and implement comprehensive search strategies. The use of automation tools and technologies in literature searches is not new; however, the adaptation of recent artificial intelligence (AI)-based research tools has rapidly transformed the work of systematic reviews from forming research questions to reporting findings. By investigating the search feature of the systematic review process, which is critical for a librarian’s role, this paper investigates the current status of AI-based search tools used and recommended for systematic reviews and broader literature reviews. Focusing on the search stage of the systematic review process, the author examines the features and viability of select AI-based tools, evaluates their integration into existing systematic review workflows, and addresses issues related to transparency, reproducibility, and trustworthiness. The study also assesses whether these AI tools can be effectively and reliably incorporated into systematic review processes and discusses the evolving roles and responsibilities of librarians in using these technologies.},
+  doi       = {10.1080/0194262x.2025.2521519},
+  file      = {:Park2025 - AI and Systematic Reviews_ Can AI Tools Replace Librarians in the Systematic Search Process_.pdf:PDF;:Park2025 - AI and Systematic Reviews_ Can AI Tools Replace Librarians in the Systematic Search Process_.epub:ePUB},
+  publisher = {Routledge},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
